B-F Sandbox Full-Backup/src/objects/Store_Check_Item__c.object
<CustomObject>
    <fields>
        <fullName>Facings_GAM__c</fullName>
        <label>Facings GAM</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facings_shelf__c</fullName>
        <label>Facings shelf</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OOS_with__c</fullName>
        <label>OOS with</label>
        <picklist>
            <picklistValues>
                <fullName>no</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Visit Item</label>
        <referenceTo>Outlet_Visit_Item__c</referenceTo>
        <relationshipLabel>Store Check Items</relationshipLabel>
        <relationshipName>Store_Check_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Store Check Items</relationshipLabel>
        <relationshipName>Store_Check_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shelf_from_bottom__c</fullName>
        <label>Shelf from bottom</label>
        <picklist>
            <picklistValues>
                <fullName>1. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Europalette</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Check__c</fullName>
        <label>Store Check</label>
        <referenceTo>Store_Check__c</referenceTo>
        <relationshipLabel>Store Check Items</relationshipLabel>
        <relationshipName>Store_Check_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Store Check Item</label>
    <nameField>
        <displayFormat>SCI-{0000}</displayFormat>
        <label>Store Check Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Check Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>